--- a/N55_Timothy_2_01__note.org
+++ b/N55_Timothy_2_01__note.org
@@ -3,7 +3,7 @@
    - [[#1_1_給牧者的信][1_1_給牧者的信]]
    - [[#1_2_寫作時間][1_2_寫作時間]]
    - [[#1_3_風格與內容][1_3_風格與內容]]
-   - [[#1_4_爲何作者的問題這麼重要_對作者的認定會影響解釋][1_4_爲何作者的問題這麼重要？對作者的認定會影響解釋]]
+   - [[#1_4_爲何作者的問題這麼重要_對作者的認定會影響解釋][1_4_爲何作者的問題這麼重要_對作者的認定會影響解釋]]
  - [[#2_提摩太後書這本書信][2_提摩太後書這本書信]]
    - [[#2_1_為甚麼要寫這封書信][2_1_為甚麼要寫這封書信]]
    - [[#2_2_使徒保羅寫提摩太後書_心中是相當寂寞的][2_2_使徒保羅寫提摩太後書_心中是相當寂寞的]]
@@ -21,7 +21,9 @@
  - [[#3_4_經文信息][3_4_經文信息]]
    - [[#3_4_1_上帝以祂奇妙的愛揀選了我們_而不是因為有甚麼特別可愛的條件才使上帝揀選我們][3_4_1_上帝以祂奇妙的愛揀選了我們_而不是因為有甚麼特別可愛的條件才使上帝揀選我們]]
    - [[#3_4_2_因為傳福音而受苦難_這是很正常的經驗_也是教會歷史必然遇到的經歷][3_4_2_因為傳福音而受苦難_這是很正常的經驗_也是教會歷史必然遇到的經歷]]
-
+ - [[#參考資料][參考資料]]
+   - [[#盧俊義牧師研經園地][盧俊義牧師研經園地]]
+   - [[#平信徒聖經註釋23_人光出版社][平信徒聖經註釋23_人光出版社]]
 
 * 1_提摩太前後書導論
 ** 1_1_給牧者的信
@@ -43,7 +45,7 @@
 
 [[N55_Timothy_2_01__note.org#目錄][目錄連結]]
 
-** 1_4_爲何作者的問題這麼重要？對作者的認定會影響解釋
+** 1_4_爲何作者的問題這麼重要_對作者的認定會影響解釋
 　　爲什麼帖撒羅尼迦前後書被公認爲保羅所寫，而提摩太前後書與提多書卻都引起爭論？雖然在此不可能對這問題提出答案，但處理一些所涉及的議題仍是必要的，因爲我們對於這些議題的態度，必會對我們現今如何理解這些書信的信息有所影響。
 
 　　一般唸新約的讀者，將會由於在書信一開頭的身分介紹，以及許多自傳式的內容，而相信教牧書信是由保羅所寫的。但特別鑽研提摩太前後書及提多書的學者，知道這當中仍有一些問題尚未獲得解答。教牧書信與其他保羅書信所使用的語言，有顯而易見的差異。的確，在希臘原文中更容易看出這項差異，但是在英文翻譯版本中也同樣看得出。一個代表性的例子，是在教牧書信中有這樣的句子：「這話是可靠，值得完全接受的」(提摩太前書一章15節；三章1節；四章9節；提摩太後書二章11節；提多書三章9節)；但這種特別的表達方式在保羅的其他書信中並未出現。除此之外，我們若仔細地研究還可以發現，在教牧書信中大概有三分之一的用語，是在保羅早期的書信中找不到的。而且，即使是在這兩類書信中都能發現的用語，在教牧書信中也有著不同的意義。舉例而言，「正義」(righteousness)這個字在教牧書信中用以形容一種道德品質(提摩太前書六章11節；提摩太後書二章22節)；但在羅馬書中，則是用以形容一種信仰的關係。在教牧書信與保羅其他書信中諸如此類的差異，使得細心的學者懷疑，這兩類書信是否真有可能出自同一人之手。
@@ -170,4 +172,13 @@
 
 [[N55_Timothy_2_01__note.org#目錄][目錄連結]]
 
+* 參考資料
+** 盧俊義牧師研經園地
+http://chungi.biblekm.com.tw/
+
+
+** 平信徒聖經註釋23_人光出版社
+《帖撒羅尼迦前後書、提多書、提摩太前後書、腓利門書 註釋》
+
+[[N55_Timothy_2_01__note.org#目錄][目錄連結]]
 
