--- a/The_Laymans_Bible_Commentary_23__orig.org
+++ b/The_Laymans_Bible_Commentary_23__orig.org
@@ -101,3 +101,58 @@
 接在這項訓諭之後.是關於主的僕人，一段積極誠懇的描述。主的僕人不但「不可爭吵」，他還必須「和氣待人，殷勤善導，處處忍耐.用溫柔規勸敵對的人」有時持續這些關於教會的辯論，它所帶來的痛苦，對我們是一個提醒，然而卻很少人留心注意這樣的忠告。主的僕人絕對不能和異教異端妥協，而是要尋求引導他們悔改，並轉向真理的知識。像舒米乃和腓理徒這一些假教師，已經掉入了魔鬼的網羅中，受他控制遵行他的旨意。這些教導錯誤教義的教師對惡者可是相當有用的！但保羅仍是希望這些人能逃離魔鬼的陷阱，並且成爲上主所可接納的僕人。大體而言，在這幾節經文裡，保羅認爲在教義教導的健全之外，還要加上溫柔的心，並要有純正的生活，這些才是上主真正僕人的記號。
 
 
+* 提摩太後書三章1-17節--對提摩太的指示
+** 假教師(三章1-9節)
+在保羅傳道的初期，他曾經期待基督能早日再臨。他對基督再臨的期待，也 清楚表達在他的教牧書信中，只有在帖撒羅尼迦前後書沒有提到這個主題。對保 羅而言，尤其在提摩太後書中，因知道自己所剩日子不多，他仍期待基督的再臨 當他描述主再來的日子臨到時，他期望看見一個與惡者之間激烈的鬥爭，和深入 揭露人性中罪惡的深度。他已經談過關於假教師的事(11章) ，在這裡他則看見 基督再臨之前，以弗所這些假教師所表現出來的惡，已經達到全面氾濫的趨勢 因此，他總結說，當世界的末日臨到時，種種的罪惡及苦難將會出現在人類的生 活中(可比較羅馬書一章18 S 32節中所描述的不信主的世界) 。保羅對人性並沒 有任何幻想，他並不是一個忽視人類靈魂可能會沉淪的理想主義者。雖然目前我們可以信賴大部份行爲正常的人，但最近這幾年所發生的一些事，卻一再揭示人 的靈魂沉淪，墮落的深淵。第2到第4節所描述的狀況，就是一個已全然墮落的 社會。後面幾節所說的，可能就是那些有著宗教的形式，卻沒有實質力量的人的 腐敗。像這樣的腐敗的情況，在教會歷史上已經出現過多次。雅尼和洋布雷，她們是反抗摩西的埃及術士。在出埃及 記中並沒有提到她們的名字，反而是在一些猶太傳統中被提及。這些假教師的愚 行將會及時顯明，當他們遇到了上主所認可、差派的使者摩西時，就算是埃及的 術士，他們的戲法不過是徒勞 
+
+** 保羅的模範(三章10-13節)
+想到那些假教師和神所嘉許的僕人之間的對比時，保羅自然而然地提供他自 己的經歷給提摩太做參考。貫穿整個第三章的主題(此外，亦是貫穿整封書信) 有提防假教師的警告"，也有保羅個人的經驗，可做爲他爲基督做見證的基礎;以及提供提摩太一個可以仿傚其忠心的模範;還有保羅對提摩太殷切的關心，期盼 他能勇敢面對即將來臨的試煉 第10到第11節總括了提摩太所觀察到的，有關保羅生命所經歷的各種實況 保羅及其他使徒的教導，爲各個時代基督信仰的教導提供了一個典範。提摩太仿 傚保羅正如保羅仿傚基督(哥林多前書十一章1節) 。有一句話說明了保羅生命 中的目標，它記載在哥林多後書五章9節:「我們都要討主的喜悅。」保羅所宣 告的信心，在羅馬書十章953節有概略說明。他所描述基督徒愛的信仰學習 記載在哥林多前書十三章。至於保羅沒有違背那從天上來的異象，則顯示了他對 上主呼召的忠心(使徒行傳二十六章19 20節) 。 提到保羅所遭受的迫害，使人回想起他第一次旅行佈道時的經歷。論及這些 並不是因爲它們比其他的經歷來得艱辛，而是這些經歷與提摩太早期的記憶息息 相關。保羅在路司得遇見提摩太，在那裡保羅被石頭打，且被遺棄以爲他已死(使 徒行傳十四章19節) 。有關保羅所面臨的艱苦和困難，我們可以在哥林多後書十 一章21 33節看到更完整的記錄 
+
+
+
+當保羅回想起他曾面對的許多危難時，他寫道:「但是，主救我脫離了這一 切。」有時，上帝的拯救正如在腓立比監獄時以奇蹟的方式出現(使徒行傳十六 章25-26節) ，但有時上帝也呼召他爲信仰的緣故忍受許多苦難(使徒行傳九章 16節) 。保羅從未明白他是否對苦難完全地免疫，他只知道主的僕人必定會從惡 者的手中被釋放出來，直到他完成了上主所託付的使命 面對迫害的實況，保羅如此寫道:「凡是立志跟從基督耶穌，過敬虔生活的 人，都會遭到迫害。」基督徒並不期待迫害，而且如果上主允許免受迫害，應該 更加感恩。但如果我們確確實實跟隨耶穌基督的腳蹤，我們必然會發現，我們深 陷在與世俗社會中非基督教因素的衝突裡，而且，通常這樣的衝突，也同樣發生 在看得見的教會中。這世界仍以有效的方式來迫害那些質疑社會既存道德規範的 人。如果基督的信仰，沒有引導我們正視這世界的邪惡，我們就應該懷疑我們是 否已經與邪惡妥協，對邪惡產生免疫力。記得耶穌在馬太福音五章11 S 12節的話 一個無法了解迫害意義的教會，很容易成爲一個對現代社會中不公義的情形，不 聞不問的教會。當耶穌基督的跟隨者更完全地了解福音的意義，並且與所處社會 
+
+
+
+20 愈的人 既存的習俗持續地衝突時，同樣地相對的過程也會發生在那些拒絕福音的人身上 他們對自己行爲上，道德和屬靈的要求越來越盲目，而且那些拒絕基督的人，和 「凡事立志跟從基督耶穌、過敬虔生活的人」，他們之間的衝突和掙扎就愈發不可 避免 
+
+** 確信聖經的啓示(三章14-17節)
+當保羅預想耶穌的信徒和假教師之間，面對來自於教會內部和外部的掙扎和 衝突時，他更鼓勵提摩太要持守並且堅信他所學習的。提摩太從小所接受聖經的 知識是從他母親友妮基，和他的外祖母羅綺的教導而來，然而保羅也是提摩太學 習的對象。事實上，保羅是提摩太偉大的導師，他開啓提摩太的雙眼，使他明白 耶穌基督的福音真實又完全的意義。但提摩太是在家裡學習，保羅所提供聖經知 識的基礎。這本聖經給保羅一個機會，簡要地闡明他對這些經文意義的了解。這 裡所提的當然是舊約。至於記載在新約中，關於舊約聖經啓示的教導，很自然地 便被基督徒拿來應用在了解新約聖經的啓示上(彼得後書1章20 21節: 一個新 
+
+
+
+約的教導，關於舊約上帝的啓示) 。 聖經使人有智慧，並且進而獲得救恩，這是聖經的中心思想。聖經供給我們 所需的知識，使我們在罪中找到救贖之恩，並且賜我們力量來奔跑天路歷程。聖 經教導我們獲得拯救是因「藉著信基督耶穌」，這句話有兩種意義。第一是聖經 指出，我們的信仰並不是建立在這本「書」上，而是這本書所指明的「人」身上 我們乃因相信基督耶穌而得蒙救贖。第二是藉著相信基督耶穌，我們才能真正明 瞭聖經的話。保羅相當確信在研讀舊約時必須如此。在哥林多後書三章15 S 16節 他敘述了那些猶太人因遠離耶穌基督的信仰，而無法了聖經的意涵。同樣在研讀 新約時，也必要持守這份信仰。若缺少對基督的認知，我們同樣無法了解新約的 內容。 當我們嘗試描述聖經如何從文字成爲一個生命體的過程時，我們必須從上帝 的啓示開始。在新約聖經中，這是再清楚不過的了，上帝藉著耶穌基督來到我們 當中，祂藉著耶穌基督的降生，生活、教導、死亡，復活及升天， 一再地顯明上 帝的作爲。而新約教會本身便是一個團契，它的成員在聖靈的引導下，了解上帝 
+
+
+
+在耶穌基督身上，爲人類所成就的一切之意義與重要性。上帝如此顯明祂自己 使這樣一個信徒的團契得以成形，存在。之後當這團契尋求它在這世上的重要性 及地位時，在聖靈的引導下，便產生了一部文學作品，這部作品不只是它文字本 身的價值，更表明了文字背後的基督。屆時，這部文學作品漸漸蒐集許多卷書 而成一本聖經正典，藉此，教會在聖靈的引導下，就能了解上帝藉著基督來到我 們中間的意義，是真實可信的。當異教之風興起，這本基督徒用以傳福音及教導 的正典，便成爲第一個接受考驗的目標，爾後，當教會的發展漸漸遠離耶穌的時 代，這本上帝話語，便成了教會本身宣揚福音信息的主要根源。當教會經歷數百 年之後，這本聖經就成爲上帝的啓示唯一的資料來源 上述的過程可以很簡明地在新約聖經的發展中加以回溯，而舊約聖經産生的 過程也很類似。在舊約時期，上帝藉著歷史上的許多事件顯明祂自己，爲要呼召 祂的百姓跟隨祂，而舊約就是透過祂的百姓，面對上帝與以色列所立的約，互動 與回應的過程而寫成的文學作品 乍品。 但這本上帝的話語並不只是歷史事件的記錄而已。它永遠指向在它文字背後， 
+
+
+
+那位藉基督來到我們當中的上帝。它更是今日上帝與我們心靈面對面接觸的地方。 聖經可以教導真理，指責謬誤，糾正過錯，指示人生正路，都是於我們有益的 ，旨 屬上帝的人必須在聖經的真理上紮根，隨時預備「能做各種善事」 
+
+* 提摩太後書四章1-22節
+保羅最後的信息  提摩太的傳道工作(四章155節) 1S5 大體而言，第三章和這封書信的內容，有三個相同的主題和保羅給提摩太最 後的信息混合在一起，在結構上似乎沒有組織得很好。這些主題分別是保羅對提 摩太的忠誠的關心，他提供提摩太可仿傚的個人見證，以及警告提防假教師。這 些都來自於一個老年人的關切，他回首自己一生即將完成的工作，並且等候在墳 墓背後的生命 保羅給提摩太最後的叮囑是在「上帝和那要審判所有活人死人的基督耶穌面 前」。就整體而言，這裡對基督耶穌的描述是附屬在這段文字的主要內容，但它 卻爲這個叮嚀增加了許多急迫性。現在活在世上的基督徒，必須知道終有一天要 站在基督的審判座前，按著肉體所做的行爲，或善或惡，接受判決(哥林多後書 
+
+
+
+五章10節) 。 保羅勸告提摩太是憑著基督的「顯現和祂的主權」，藉此，使保羅的勸告更 加有力。尤其這個憑藉更可以將基督審判全人類的工作連結在一起。這個勸告的 核心就是「要傳揚福音」的命令。提摩太要去宣揚他所領受的信息，如同一個基 督的牧者，宣稱「上帝藉著基督與人類建立和好的關係」(哥林多後書五章19節) 在宣揚這個信息時，就他對救恩重要性的了解，應該顯出相當的急迫性，因爲這 個救恩是上帝藉著耶穌基督和祂對人們需要這救恩的了解而設立的。這樣一個福 音的宣告必須帶著情感，帶著力量，因爲在將來必然是充滿各種對立的信仰 在第3S4節中，提防錯誤教導的警告又再次出現。不同的是，此處有一個 新的說明--這些假教師的興起是因爲人們需要他們。而福音的信息，如果被聽 見也清楚了解，就可以成爲我們安慰的來源，但耶穌基督卻猶如一個刻意唱反調 5的來原，日 的人和人類面對面。祂深入尋找，想了解那些願意跟隨祂的人到底有什麼期待 因此，福音的信息在尚未提供醫治之前，本身卻先受到傷害。耶穌可以扮演一個 擾亂者的角色出現在人類的生命裡。而且，當人們被福音強烈的要求冒犯時，就 
+
+
+
+五章10節) 。 保羅勸告提摩太是憑著基督的「顯現和祂的主權」，藉此，使保羅的勸告更 加有力。尤其這個憑藉更可以將基督審判全人類的工作連結在一起。這個勸告的 核心就是「要傳揚福音」的命令。提摩太要去宣揚他所領受的信息，如同一個基 督的牧者，宣稱「上帝藉著基督與人類建立和好的關係」(哥林多後書五章19節) 在宣揚這個信息時，就他對救恩重要性的了解，應該顯出相當的急迫性，因爲這 個救恩是上帝藉著耶穌基督和祂對人們需要這救恩的了解而設立的。這樣一個福 音的宣告必須帶著情感，帶著力量，因爲在將來必然是充滿各種對立的信仰 在第3S4節中，提防錯誤教導的警告又再次出現。不同的是，此處有一個 新的說明--這些假教師的興起是因爲人們需要他們。而福音的信息，如果被聽 見也清楚了解，就可以成爲我們安慰的來源，但耶穌基督卻猶如一個刻意唱反調 5的來原，日 的人和人類面對面。祂深入尋找，想了解那些願意跟隨祂的人到底有什麼期待 因此，福音的信息在尚未提供醫治之前，本身卻先受到傷害。耶穌可以扮演一個 擾亂者的角色出現在人類的生命裡。而且，當人們被福音強烈的要求冒犯時，就 
+
+
+
+見。但他知道他已經走到生命之路的末端了。他能回首他在人世間當跑的路，已 經跑過了。他已經打了那美好的仗。在善惡之間掙扎時，他爲了基督耶穌的緣故 決定付上他所有的生命。生命在任何時刻都是一種掙扎，但站在對的一方或錯的! 方，卻可使生命產生極大的差異。保羅已經結束了他的賽跑。在這段話的背後，似 乎說明上主已經爲我們預備這樣的競賽，要我們跑完全程。保羅已持守住這個信仰 他堅持忠心於基督信仰而來的啓示。他對生命的了解已在許多地方接受考驗，但他 仍然順服那從天上來的異象，就是在大馬士革的路上，上帝啓示給他的。他已將他 的性命擺上給猶太人和外邦人做見證，「勸勉他們必須悔改，歸向上帝，所做所爲 要符合他們悔改的心志」(使徒行傳二十六章20節) 。第7節是他對生命的回顧，第 8節則是他帶著希望，愉快地等待未來。如同一個選手已經完成了他的比賽，保羅 期待從神那裡接受公義的華冠做爲賞賜。對他而言，這代表了上帝的接納，並且可 以「跟祂的兒子有相同的特質」(羅馬書八章29節) 。當保羅宣告上主，就是那公義 的審判者，將同樣地賜公義的華冠給「所有愛慕祂顯現的人」時，對所有基督真實 的信徒而言，他個人的見證，已轉化成爲一個帶著希望的信息 
+
+
+
+請求與警告(四章955節) 這幾節有許多個人的論述，提供了之前已經提到的幾個人，關於他們性格上 的一些資料。底馬貪愛現世，已經離開保羅往帖撒羅尼迦去了。我們不禁懷疑這 一個逃脫者在帖撒羅尼迦會受到怎樣的待遇?其他人都離開了，只有路加一個人 與保羅同在。在這裡保羅特別讚賞馬可，因爲對保羅而言，馬可是完全擺上自己 參與福音的工作。接下來，保羅提及他需要那件在特羅亞時留在加布家裡的舊外 衣，並盼望拿到他的書，「尤其是那幾本羊皮書卷」，表現了保羅人性的需要。 但願我們能多知道一些銅匠亞歷山大如何陷害保羅。唯一可確定的是他反對保羅 的信息，而且保羅也認爲應該警告提摩太提防這個人 第一次辯護的回報(四章16 S 22節) 相當出人意外地，保羅在這封信的結尾，簡短報告了他最近接受的審判或公 聽會的情況。他被那些來自亞細亞的朋友離棄了。顯然在當時的羅馬，成爲保羅 的朋友並不是一件安全的事。因著朋友的離棄，保羅接受審判的時候，就更能感 
+
+
+
+受上帝的同在。而他又再一次利用受審的機會，向外邦人做見證，見證耶穌是救 世主。他已從「獅子口裡」被救了出來。在字義上這可能是真的，因爲當時的基 督徒常被丟入獅子群中而殉道，在哥林多前書十五章32節，保羅也提過他曾「在 以弗所跟那些野獸格鬥」。但更可能的是，這是一句俗諺，用以表達他自重大且 急迫的危機中得救。這也讓我們清楚看見保羅最後對自己信仰的肯定與承認。保 羅確信上主會救他脫離一切的邪惡，並且接他前往天家。這並不代表他期待死亡 因爲就整段文字來說，我們看見他知道自己的死期已迫在眉睫。而從他人生旅途 上，經歷了許多上主的救贖能力，他確信上主不會在他死亡的時刻遺棄他，並且 會保守他回到天家。第658節的話使他的見證更加堅定，而且成爲每個基督徒 盼望的基礎。當我們將我們的希望完全堅立在上主身上，就是救我們脫離罪惡 我們個人的救主，也是我們永生盼望的基石，我們就可以和保羅一起同聲說:「願 榮耀永永遠遠歸於他!阿們。」並且我們也可領受保羅的祝福，如同他寫給提摩 太的:「願主與你同在!願上帝賜恩典給你們!」 
+
+
+
