--- a/N55_Timothy_2_4__note.org
+++ b/N55_Timothy_2_4__note.org
@@ -18,14 +18,14 @@
 　　因此，辨別真確的信仰內涵，對一個信徒來說是很重要的信仰功課，而對一個傳道者來說，則是他在傳福音事工時，特別是在牧養工作上，需要經常注意的一件事。
 
 * 2_經文內容
-*** 第一至五節：
+** 第一至五節：
 　　在第一節一開始，使徒保羅就談到對人的生命有審判主權的，就是上帝和耶穌基督，我們不要小看這句話的重要性，因為這句話也是在否定羅馬政府對人生命的主宰權。使徒保羅當時是被關在監獄中，當他這樣寫的時候，等於在告訴羅馬政府，他不承認羅馬政府對他有生命的判決權，這種權柄只有創造生命的上帝，和為了救贖人的生命而犧牲在十字架上的耶穌基督才擁有而已，不是世上任何一個人所擁有的政治權柄和勢力。其實，我們如果從耶穌基督所說的話來認識，也會清楚使徒保羅所說的這句話是有原因的，耶穌基督說：「朋友們，我告訴你們，那只能殺害肉體，卻不能進一步傷害你們的，不用害怕。我要指示你們該怕的是誰：你們要怕那位奪走人的生命以後，又有權把他投入地獄的上帝。是的，我告訴你們，應該懼怕的就是他！」（路加福音十二：4-5）
 
 　　耶穌基督這句話已經清楚在說明生命的主權是在上帝，人並沒有這樣的權柄。人所能做的，只能對人的身體進行迫害；但真正主宰著人的得救與否之權，那才是最重要的，而這權柄卻是在上帝和復活的耶穌基督身上。再者，這句「審判所有活人死人的基督耶穌」，可說是早期教會最重要的信仰告白內容。這句話也就是在回應當時羅馬政府對基督徒的迫害，基督徒要表明並不害怕這樣的迫害，因為真正的審判者就是復活的耶穌基督，他的審判是連活人、死人都包含在內。我相信這句話對我們是一點也不陌生，因為在使徒信經中就有提到復活的耶穌基督要來「審判活人與死人」這句話。
 
 　　第二節對傳道者來說，或是對今天的基督教會都是具有非常大的意義，因為傳福音乃是教會存在的最重要使命，也是基督徒應該有的責任。而我們知道這裏所說的福音，指的就是耶穌基督拯救的信息。使徒保羅告訴提摩太不論在甚麼情況下，都要傳福音，因為福音是和生命的得救與否有密切關係。不是喜歡的時候才要傳福音，也不是遇到挫折或是困境時，就對福音事工採取懈怠或是放棄的態度。
 
-使徒保羅在這裏提到幾個牧養工作的重點：
+　　使徒保羅在這裏提到幾個牧養工作的重點：
 一是要耐心勸勉。這讓我們看出，牧養工作並不是一件易事，有些信徒並不是很甘願或是容易接受真理的教導，這就必須多用些時間，特別是在這裏提到要「耐心」，所謂的「耐心」，是指不妥協，但原則很清楚之意。並不是為了討好信徒，怕信徒離棄信仰就採取睜一隻眼、閉一隻眼的態度，不是這樣。而是要一而再、再而三的給予鼓勵之意。
 
 二是督責，意思是指知道錯誤時，沒有將之當作沒有發生，而是會清楚地讓信徒知道，錯誤在甚麼地方。
@@ -42,7 +42,7 @@
 
 三是忠心履行事奉的職務。這句話可以對照第二節所提到的「不管時機理想不理想都要傳」。但請注意，這並不是說非要在哪一間教會牧會多久才是在履行事奉的職務，我經常告訴那些因為與教會之間有發生糾紛的傳道者說，傳福音並不是被限制在教會，在教會是在牧會，真正可以讓一個傳道者放手去傳福音的地方，是在教會以外的地方，那是一個廣大的社會空間。傳道者就應該像耶穌基督告訴他的門徒所說的：「無論到甚麼地方，如果當地的人不接待你們，也不聽你們的話，你們就離開那地方，把腳上的塵土也跺掉，表示對他們的警告。」（馬可福音六：11）使徒保羅就曾用這種態度回應彼西底的安提阿人，以及哥林多城人對福音的冷漠（參考使徒行傳十三：50-51、十八：6）。沒錯，傳道者要盡責任在傳福音的事工，不論所遇到的境況是甚麼，都不要放棄傳福音的使命和責任。
 
-*** 第六至八節：
+** 第六至八節：
 如果我們要說使徒保羅寫給提摩太的書信中，最精華的經文在哪裏？應該可以說是這一段才對。在這段經文中，使徒保羅提到幾點很值得我們注意的事：
 
 一是他知道自己所剩下的日子不多（第六節）。所以他說他「離開人世的時刻」到了。在第六節他說自己「犧牲」的時候到了，為甚麼他是用「犧牲」這樣的句子呢？這是採用民數記第廿八章七節所提到以色列人用羔羊獻祭在祭壇上的方式，要把獻在祭壇上的羔羊澆滿一公升的酒，然後才點上火燒化獻給上帝。使徒保羅用這樣的詞句來形容自己就像要獻給上帝的時刻到了，意思就是他已經知道羅馬皇帝還是會將他判處死刑，但他看這樣的死刑乃是使他可以當作獻給上帝的牲祭一樣。
@@ -53,7 +53,7 @@
 
 再者，使徒保羅在第六節這裏用「離開人世」這個詞的希臘文是「analuseos」，這個詞後來演變成為英文的「analysis」（分析）。所謂「分析」，意思就是把原本糾纏在一起的東西，逐一的解開來，使之更清楚、明白。因此，這個字也有「鬆開」、「解放」的意思。這樣，我們可以從這裏了解使徒保羅在說他「離開人世」的時刻到了，意思就是指糾纏生命的一切枷鎖都將解開，不再負著重擔。這就像耶穌基督所說的：「來吧，所有勞苦、背負重擔的人都到我這裏來！我要使你們得安息。」（馬太福音十一：28）這也是為甚麼基督教信仰將生命的死亡看成是一種卸下重擔一樣，不是難過、痛苦，而是一種生命的解放（或是一般人所說的「解脫」之意）。因為辛勞一生，終於可以安然休息了，這是很值得安慰的事，特別是有耶穌基督成為復活生命的保證時，這樣的生命更是令人欣慰的事。
 
-*** 第九至十五節：
+** 第九至十五節：
 銅匠亞歷山大害我不淺；主會照他所做的報應他。你自己也得提防他，因為他極力反對我們所傳的信息。
 
 這段經文讓我們看到許多珍貴的歷史資料：
@@ -68,14 +68,14 @@
 
 五是銅匠亞歷山大對使徒保羅的傷害很大。這一位亞歷山大到底是誰？我們並不清楚，很可能就是和提摩太前書第一章二十節所提起的那位「亞歷山大」同一個人。到底是怎麼傷害使徒保羅的？也沒有明確資料可循，但使徒保羅在這裏所用的「害」這個字，在希臘文是用「endeiknumi」，這個字是「顯露」、「陳列」的意思，也含有「舉證」的意義。換句話說，很可能亞歷山大就是一個告密者，向羅馬政府告密有關基督徒聚會的事，這對早期教會來說，是很嚴重的一件傷害事件。因此，使徒保羅不僅在這裏提起，還特別要提摩太提防這個人。
 
-*** 第十六至十八節：
+** 第十六至十八節：
 第十六節一直被聖經學界討論甚多，到底這裏所提起的「第一次為自己辯護」，這是指甚麼時候的第一次？是使徒行傳第廿八章記載的第一次抵達羅馬之時嗎？不太可能，因為那次並不是沒有人在他身邊，而是有些人一直在關心他、陪伴著他，甚至他還可以自由行動，且去拜訪他的人甚多。因此，有不少學者認為應該是在第二次他被關在監獄之時，那時因為看來情況並不樂觀，且迫害的情形越來越嚴重，頗有風聲鶴唳的氣氛，因而敢公開去探監的人沒有了，大家都有自身難保的危機意識。
 
 第十七節，使徒保羅說上帝給他力量，使他能夠將耶穌基督復活的信息傳出來。其實，這也是使徒保羅堅持要上訴羅馬皇帝法庭的主要因素之一，他一直要讓羅馬統治當局知道，製造亂象的，並不是基督徒，而是一些想要迫害基督徒的猶太人，或是那些排斥基督教信仰的人。他一直努力要讓羅馬統治當局知道，基督徒是很守本份的，絕對不會與政府對抗（參考羅馬書十三：1-7）。除了這個因素之外，使徒保羅最希望做的一件事，就是將耶穌基督復活的信息傳揚出去，特別是希望能將復活的信息傳給羅馬統治階層的人。當他被羅馬總督、巡撫等人詢問時，他都會利用機會宣揚耶穌基督復活的信息（參考使徒行傳廿四：15、21、廿六：23），也因此使得羅馬總督制止他，認為使徒保羅是「瘋了」，是「神經失常了」（參考使徒行傳廿六：24）。這讓我們看出，使徒保羅就是要想盡辦法將耶穌基督復活的信息傳揚出去，那怕是被關、被殺，對他來說，那都是為了傳揚耶穌基督復活的信息的緣故。
 
 第十八節，在這裏，使徒保羅並不是認為自己會從監獄中獲得釋放，因為他已經知道獲救的希望渺茫，才會要提摩太替他拿需要的衣服和書籍，並且要提摩太趕緊到羅馬去跟他相會，因此，這裏他說「主一定會救我脫離一切邪惡」，指的乃是讓他有堅定的信心，不受到任何外力的誘惑，甚至為了保存生命的安全而妥協傳福音的態度，或是對自己過去所傳揚的信息做任何傷害真理的承諾。他深信因為傳福音的緣故而受到迫害或喪失生命的，終必獲得上帝的賞賜，這就是在上帝國裏面得到永恆的生命。
 
-*** 第十九至廿二節
+** 第十九至廿二節
 在這裏提到一份很齊全的名單，這也是後書與前書之間最大的差異。
 
 亞居拉和百基拉，這是一對夫妻，他們夫妻兩人原本就是織帳棚的人，在哥林多城相遇，因為與使徒保羅同業（參考使徒行傳十八：2-3），且又有共同的信仰，因此，一直是使徒保羅在福音事工上最好的伙伴。他們也為了福音的緣故，特地將自己的家開放成為聚會的地方（參考哥林多前書十六：19）。
