--- a/Calvin_Institutes_3_21__orig.org
+++ b/Calvin_Institutes_3_21__orig.org
@@ -51,5 +51,5 @@
 
 　　神之所以不斷地從亞伯拉罕的後裔中，而不是從外邦國家中有效地將自己的教會呼召出來，是根據祂的恩約。雖然大多數的以色列人違背了這約，但祂卻保守了剩下的餘數，免得這恩約至終落空。簡言之，神對亞伯拉罕整個後裔的收養，從某一點來說是具體預表神對他們當中少數人更大的祝福。也就是為何保羅很仔細地將亞伯拉罕肉身所生的兒女與他屬靈的兒女，用以撒為代表的選民區分開來(加四28)。這並不是說作亞伯拉罕的後裔是徒然、無益的，若這樣說就是侮辱神的恩約！但神不改變的計畫就是祂照自己的美意預定人歸向祂的計畫，唯獨在乎這些屬靈的後裔。但在我引用許多經文充分證明這觀點之前，請讀者們不要先匆促做決定。
 
-** 揀選教義的總結
+* 揀選教義的總結
 　　聖經明確地教導，神根據祂永恆不改變的計畫，揀選了祂預定賞賜救恩的人，以及遺棄祂預定滅亡的人。我們深信對神的選民而言，這計畫是根據祂白白的憐憫，而不是人的價值。但神以祂的公正、無可指責卻測不透的審判，向祂所預定滅亡的人關了永生的門。就神的選民而論，神的呼召證明他們被揀選。我們也深信他們的稱義是另一個證據，直到他們得榮耀，就是這揀選的完成。然而，就如神藉著祂的呼召和稱義，見證祂的選民，同樣地，祂拒絕使祂所遺棄的人認識自己，或被聖靈成聖，也據此彰顯他們將受怎樣的審判。我在此略而不談許多愚昧者為了推翻預定論的教義所捏造的幻想。我們無須反駁這些幻想，因為它們本身就充分證明它們的錯誤。我只要稍微討論知識份子攻擊預定論的謬論，或可能絆倒單純之人的謬論，或不敬虔之人用來攻擊神公義的謬論。
