--- a/The_Laymans_Bible_Commentary_23__orig.org
+++ b/The_Laymans_Bible_Commentary_23__orig.org
@@ -136,11 +136,13 @@
 
 
 
-五章10節) 。 保羅勸告提摩太是憑著基督的「顯現和祂的主權」，藉此，使保羅的勸告更 加有力。尤其這個憑藉更可以將基督審判全人類的工作連結在一起。這個勸告的 核心就是「要傳揚福音」的命令。提摩太要去宣揚他所領受的信息，如同一個基 督的牧者，宣稱「上帝藉著基督與人類建立和好的關係」(哥林多後書五章19節) 在宣揚這個信息時，就他對救恩重要性的了解，應該顯出相當的急迫性，因爲這 個救恩是上帝藉著耶穌基督和祂對人們需要這救恩的了解而設立的。這樣一個福 音的宣告必須帶著情感，帶著力量，因爲在將來必然是充滿各種對立的信仰 在第3S4節中，提防錯誤教導的警告又再次出現。不同的是，此處有一個 新的說明--這些假教師的興起是因爲人們需要他們。而福音的信息，如果被聽 見也清楚了解，就可以成爲我們安慰的來源，但耶穌基督卻猶如一個刻意唱反調 5的來原，日 的人和人類面對面。祂深入尋找，想了解那些願意跟隨祂的人到底有什麼期待 因此，福音的信息在尚未提供醫治之前，本身卻先受到傷害。耶穌可以扮演一個 擾亂者的角色出現在人類的生命裡。而且，當人們被福音強烈的要求冒犯時，就 
+五章10節)。
+保羅勸告提摩太是憑著基督的「顯現和祂的主權」，藉此，使保羅的勸告更加有力。尤其這個憑藉更可以將基督審判全人類的工作連結在一起。這個勸告的核心就是「要傳揚福音」的命令。提摩太要去宣揚他所領受的信息，如同一個基督的牧者，宣稱「上帝藉著基督與人類建立和好的關係」(哥林多後書五章19節)。在宣揚這個信息時，就他對救恩重要性的了解，應該顯出相當的急迫性，因爲這個救恩是上帝藉著耶穌基督和祂對人們需要這救恩的了解而設立的。這樣一個福音的宣告必須帶著情感，帶著力量，因爲在將來必然是充滿各種對立的信仰。
 
+在第3~4節中，提防錯誤教導的警告又再次出現。不同的是，此處有一個新的說明——這些假教師的興起是因爲人們需要他們。而福音的信息，如果被聽見也清楚了解，就可以成爲我們安慰的來源，但耶穌基督卻猶如一個刻意唱反調的人和人類面對面。祂深入尋找，想了解那些願意跟隨祂的人到底有什麼期待。因此，福音的信息在尚未提供醫治之前，本身卻先受到傷害。耶穌可以扮演一個擾亂者的角色出現在人類的生命裡。而且，當人們被福音強烈的要求冒犯時，就會有人軟化它的信息，使人們不致於面對太大的壓力。偶爾也有牧師被引誘，爲他的信徒扮演起保護者的角色，使他的信徒免於直接面對上帝話語的衝擊。在末後的日子，會眾也將受誘「隨從自己的慾望，到處拜人爲師」且「掩耳不聽真理的話」，這些會眾可能已隨時預備以那些較受歡迎的「神話」(myths)來代替不受歡迎的真理。這樣的神話是已然存在在他們的成見中，而真理則是根植於對基督教信仰，一個較健全的了解，而這真理可能會妨礙他們已經建立的習俗。第5節保羅繼續給提摩太的勸告。他要隨時謹慎，預備忍受苦難，努力傳道人應做的工作。如果他這樣做，他便完成了服事的職責(使徒行傳二十章24節)。
 
-
-五章10節) 。 保羅勸告提摩太是憑著基督的「顯現和祂的主權」，藉此，使保羅的勸告更 加有力。尤其這個憑藉更可以將基督審判全人類的工作連結在一起。這個勸告的 核心就是「要傳揚福音」的命令。提摩太要去宣揚他所領受的信息，如同一個基 督的牧者，宣稱「上帝藉著基督與人類建立和好的關係」(哥林多後書五章19節) 在宣揚這個信息時，就他對救恩重要性的了解，應該顯出相當的急迫性，因爲這 個救恩是上帝藉著耶穌基督和祂對人們需要這救恩的了解而設立的。這樣一個福 音的宣告必須帶著情感，帶著力量，因爲在將來必然是充滿各種對立的信仰 在第3S4節中，提防錯誤教導的警告又再次出現。不同的是，此處有一個 新的說明--這些假教師的興起是因爲人們需要他們。而福音的信息，如果被聽 見也清楚了解，就可以成爲我們安慰的來源，但耶穌基督卻猶如一個刻意唱反調 5的來原，日 的人和人類面對面。祂深入尋找，想了解那些願意跟隨祂的人到底有什麼期待 因此，福音的信息在尚未提供醫治之前，本身卻先受到傷害。耶穌可以扮演一個 擾亂者的角色出現在人類的生命裡。而且，當人們被福音強烈的要求冒犯時，就 
+保羅的離去(四章6~8節)
+第658節包含了許多保羅個人的見證。第一個提到的是他的死要如同獻祭 的血一樣澆奠出去(腓立比書11章17節) ，第二個則是他的死亡是他離去與基督 同在的時刻(腓立比書1章23節) 。在腓立比書曾經說過的現在就要成爲事實 當然，死亡並不是馬上就要臨到。保羅仍然希望能夠活著，直到提摩太與他再相 
 
 
 
