--- a/Calvin_Institutes_3_22__orig.org
+++ b/Calvin_Institutes_3_22__orig.org
@@ -41,3 +41,41 @@
 　　我們在此要思考保羅在另一處所記載的神所預知的餘數(羅一一2)。這預知並非如我們仇敵所幻想的在瞭望台上無所事事、無動於衷的觀察，而是聖經對這一詞常記載的含義。因當路加引用彼得的話說：基督「按著神的定旨先見被交與人」，並被釘在十字架上(徒二23)時，他所描述的神並不是旁觀者，而是我們救恩的創始者。此外，當彼得描述他寫信的對象為照父神的先見被揀選者(彼前一2)時，就明確地教導神所決定收養為兒女的人是出於祂隱密的預定(彼前一2)。在同樣的意義上，他用「定旨」這一詞作為「先見」的同義詞，既然「定旨」這一詞的意思是堅定的決定，他無疑在教導我們：既然神是我們救恩的創始者，這救恩就在乎祂自己而不在乎人。他也在同一章經文中，以同樣的意義記載基督在創世以前是預先被神所知道的(彼前一19-20)。我們若說神在天上想從世上尋找世人蒙救恩的方式，難道有比這更荒唐的嗎？因此，保羅所說的被預知的餘數，其實只是自稱為神百姓之眾多以色列人當中的少數人。他在另一處斥責那些有名無實並稱自己為世上最敬虔的人，為了塞住他們的口，保羅說：「主認識誰是祂的人。」(提後二19)簡言之，保羅的這句話向我們指出兩種人：一種是亞伯拉罕所有的後裔；另一種是神所分別出來向人是隱藏的餘數。他無疑在重複摩西的教導，即神要恩待誰就恩待誰(出三三19)，(雖然當時似乎全以色列人都是神的百姓)；他好像在說：神在祂一般的呼召中特別恩待一些人，使他們成為更聖潔的百姓，且這和祂與以色列人所立的恩約並無衝突。神為了表明祂的恩典是白白的，並且祂在這事上擁有主權，無可辯駁地宣告祂照自己所喜悅的憐憫某人而不憐憫其他人。當神施恩給尋求祂的人時，人雖然不否定這憐憫出自於神，但他卻以為自己的行為先於這憐憫，或部分地將神所宣告給祂自己的稱讚歸在自己的身上。
 
 
+* 反駁反對揀選之根據的人，這也是遺棄的根據(7-11)
+** 7基督對揀選的見證
+　　我們現在要聽那既是大君王法官，也是主的那位對此的教導。基督因知道大多數聽眾剛硬的心，也深信祂對他們的教導幾乎完全是徒然的，為克服這障礙，祂說：「凡父所賜給我的人必到我這裡來。」(約六37)「差我來者的意思就是：祂所賜給我的，叫我一個也不失落。」(約六39)注意！父神的賜福是我們蒙基督保守的起因。也許有人會在此顛倒這辯論，說唯有靠信心自願降服基督的人，才是神的選民，然而基督所堅持的是：即使千萬人對祂的離棄震撼全世界，神永不動搖的揀選計畫，會比天更穩固。
+
+　　基督告訴我們，當神將選民賜給祂的獨生子之前，他們早已是屬父的。你或許會問這是否是根據他們的本性。答案是：不！因為神所吸引到祂那裡去的人本來是局外人。基督的這段話清楚到無人能反駁。祂說：「若不是差我來的父吸引人，就沒有能到我這裡來的……凡聽見父之教訓又學習的，就到我這裡來。」(約六44-45)若所有的人都在基督面前屈膝，那麼神的揀選就是普遍的，但既然只有少數人歸向基督，這就證明神的揀選是特殊的。所以，在基督宣告神賜給祂的門徒本屬神(約一七6)之後，接著說：「我不為世人祈求，卻為祢所賜給我的人祈求，因他們本是祢的。」(約一七9 p.；約一五19)為何不是全世界的人都屬於他們的造物主呢？難道不就是神的恩典，從祂的咒詛、忿怒和死亡之下，救贖這些若在神的恩典之外必定滅亡的人嗎？但神任憑世人自取滅亡，因這是祂所預定的。同時，雖然基督是我們的中保，但祂卻宣稱自己與父同樣有揀選的權柄。祂說：「我這話不是指著你們眾人說的，我知道我所揀選的是誰。」(約一三18)若有人問基督從哪裡揀選祂的選民，祂在另一處經文中回答這個問題：「我從世界中揀選了你們」(約一五19)，且當基督在父面前為門徒代求時，祂同時也摒棄世人(約一九 9)。我們必須相信的是：當基督宣告祂知道祂所揀選的是誰時，祂指的是在全人類當中有某些與眾不同的人而且使他們與別人不同的，不是他們自己的美德，而是神的預旨。
+
+　　我們以此推論，無人能靠自己的勞力或努力與眾不同，因基督宣稱自己是揀選的創始者。祂在某處將猶大算在選民之內，雖然他「是個魔鬼」(約六70)，但這選擇指的只是使徒的職分。雖然這職分確實表明神的恩惠，就如保羅常常說的那樣(例：加一16；弗三7)，這恩惠本身不一定包括永生的盼望。因此，猶大墮落到不如魔鬼的地步，他不忠心擔任使徒的職分。然而基督必不容祂從前一次稼接到祂身上的任何肢體滅亡(約一○28)，因基督在保守他們的救恩時，將行祂所應許他們的事，即祂將發揮那比萬有都大的父神的大能(約一○29)。因祂之後說：「祢所賜與我的其中除了那滅亡之子，沒有一個滅亡的。」(約一七11-12)雖然這似乎似是而非，然而它的意思是顯然的。綜上所述，神出於白白收養之恩，將兒子的名分賜給祂所喜悅的人，然而這揀選的起因，完全在乎祂自己，因祂喜悅照自己隱密的旨意行萬事。
+
+** 8教父們(尤其是奧古斯丁)對神「預知」的解釋
+　　但安波羅修、俄利根以及耶柔米都主張：神照祂所預知的，使用祂的恩典而將這恩典分配給人。此外，雖然奧古斯丁也曾有這樣的觀點，但在他更明白聖經的教導之後，他不但承認自己明顯的謬誤，甚至勇敢地反駁這謬誤。在他悔改之後，他斥責伯拉糾主義者(Pelagian)，因他們續繼相信這謬論。他說：「若是如此，那保羅卻沒有這樣教導，不是令人感到很驚訝嗎？因當他教導神在人出生前對人奇妙的揀選，並問：這樣我們可說什麼呢？難道神有什麼不公平嗎？」(羅九14)他應當在此教導神預知誰有應得救恩的功勞，但他卻沒有這樣說，反而教導神的公正和憐憫。
+
+　　當奧古斯丁在另一處駁倒人的功勞是神揀選人的因素之後，他說：「這經文完全反駁那些使神的預知與祂的憐憫敵對者，並因此說神之所以在創立世界之前揀選我們，是因祂預先知道我們將為善，並不是因為祂將使我們成為善人之人的教導。神的這句話：『不是你們揀選了我，是我揀選了你們』(約十五16)並不是教導神的揀選根據祂預知人的良善。因為祂若因預先知道我們將為善而揀選我們，祂同樣也會預先知道我們將選擇祂而因此得救。」
+
+　　那些看重教父權威的人，同樣也應當留意奧古斯丁的這見證，奧古斯丁不接受伯拉糾主義者指控他的教導與其他教父的不同，他甚至引用安波羅修的話說：「基督呼召祂所憐憫的人。」以及「神若願意就能使不敬虔的人成為敬虔的；但神呼召祂所喜悅的人，並使祂所喜悅的人成為聖潔。」雖然我可以只引用奧古斯丁的話寫一本書，證明這是教父的教導，然而我不想如此增加讀者的負擔。
+
+　　即使教父對此沒有任何教導，我們自己也當面對這問題。有人曾經提出這難題：神只施恩給一些人，是否公正？雖然保羅可以只用一句話證明是因人的善行，但他卻沒有這麼做，反而有複雜的解釋。因為的確不是因人的善行，若真是如此，那藉他口說話的聖靈，不會忘記這一點，以致在此不提。保羅他毫不婉轉地回答：神隨己意施恩給祂的選民，祂也隨己意憐憫他們，因祂說「我要恩待誰就恩待誰；要憐憫誰就憐憫誰」(出三三19 p.)的意思，是神之所以發憐憫，完全是因祂喜悅發憐憫。如此， 奧古斯丁的話是正確的：「神的恩典並不是尋找配得蒙揀選的人，而是使祂所揀選之人的行為，與這恩典相稱。」
+
+** 9神白白的恩典使人有善行，難道神的揀選不是根據神對這些人的善行「預知」嗎
+
+　　我們略而不談多馬·阿奎那狡猾的解釋，即從神的角度來看，對善行的預知不是預定論的起因，但從人的角度來看，我們可以這樣說，就如聖經教導，神根據人的功勞預定人得榮耀，因為神決定賜給人他應得榮耀的恩典，神既然喜悅我們相信祂的揀選唯獨來自祂的慈愛，所以若任何人以為有其他的起因，就是虛妄的幻想。然而，我們也可以用和多馬·阿奎那一樣狡猾的說法來反駁他。他爭辯：從某方面來說，神因祂選民的功勞預定他們得榮耀，神預定施恩給他們，使他們應得榮耀，但我反對他所說的，我主張神因揀選人得永生而預定施恩給他們，而這恩典來自神的揀選。換言之，神預定施恩給祂早已預定得榮耀的人，因神喜悅藉揀選之恩使祂的選民稱義。這就證明神預定人得榮耀是祂預定給他們恩典的起因而不是結果。然而我們不打算陷入這種爭辯的漩渦，因為對於堅信神真道之完備性的人而言，這些爭辯都是多餘的。一位古時的神學家說得好：「那些教導神的揀選是根據人的功勞者，是自以為聰明的。」
+
+** 10神的呼召是普遍性的，揀選則是特殊的
+
+　　有人反對說：神如果毫無分別地邀請眾人歸向祂，卻只接受少數人作祂的選民，這樣就是背乎祂自己。對這些人而言，神應許的普遍性，證明祂的恩典不是特殊的。有一些人為了避免極端而這樣說，並不是要阻擋真理，而是為了避免回答複雜的問題，以及限制人的好奇心，他們的意圖雖是好的，卻仍不能被接受，因逃避總是無可推諉的。至於那些悖逆地咒罵神揀選的人，他們的異議是污穢的、他們的錯誤是可恥的。
+
+　　我以上已教導過聖經如何解釋這難題，即神藉講道呼召所有的人當悔改和相信福音，但神卻沒有將悔改和信心賜給所有的人。我之後將重複這教導。我否認他們的教導，因它在兩方面是錯誤的。就如神預言某個都市將下大雨，而另一個都市將有旱災(摩四7)，並在某處將有聽不到耶和華話語的饑荒(摩八11)，同樣地，神並沒有約束自己呼召所有的人。而且神之所以禁止保羅在亞西亞講道(徒一六6)，叫他越過庇推尼並引領他去馬其頓(徒一六7 ff.)，就證明祂有權柄隨意分配祂福音的財寶。神藉以賽亞的口，更清楚地教導救恩的應許是特別給祂選民的，因祂宣告唯有他們而不是全人類要成為祂的門徒(賽八16)。顯然，既然神只把救恩安排給自己的子民，所以人若教導這救恩對眾人一樣有效，就是在玷污這救恩。
+
+　　我們現在至少可以這樣說：雖然我們毫無分辨地傳福音給萬人，但神只將信心的恩賜賜給少數人。以賽亞告訴我們為什麼：耶和華的膀臂並不是向所有的人顯露(賽五三1)。他若說福音受人惡劣地攻擊或藐視，是因他們悖逆並拒絕聆聽，如此，他們所教導神普遍的呼召或許有某種程度的說服力。當先知教導人的盲目，是因耶和華不向他們顯露自己的膀臂(賽五三1)時，他並無意減輕人的罪。他只是在教導：既然信心是神特殊的恩賜，所以在這恩賜之外，講道對人毫無果效。我要請問這些博士，到底是講道本身，還是信心使人成為神的兒女。的確，如《約翰福音》第一章裡的話：「凡接待祂的，就是信祂名的人，祂賜他們權柄作神的兒女」(約一12)，這不是什麼模糊的教導，神反而在此明確教導接待基督的人「不是從血氣生的，不是從情慾生的，也不是從人意生的，乃是從神生的」(約一13, Vg)。
+
+　　然而他們卻說，信心與真道是互相平衡的，這是有信心時的現象。然而最普遍的現象是種子落在荊棘裡(太一三7)或落在粗淺石頭地上(太一三5)，這不但是大多數人表現對神頑梗不信的原因，也是因神並非賞賜所有人可見的眼和可聽的耳。那麼，神呼召一些祂早知道不會歸向祂的人，怎麼說不是背乎自己呢？我請奧古斯丁替我回答：「你要與我爭辯嗎？你反而應當與我一同感到驚奇而說：『聖哉』！但願我們以敬畏的心接受這話，也不要因自己的錯誤而滅亡。」此外，根據保羅的教導，若揀選是信心之母，我們就能推論神的揀選既然是特殊的，那麼信心就不可能是普遍的。這是非常合理的推論，因為當保羅宣告「神在基督裡曾賜給我們天上各樣屬靈的福氣，就如神從創立世界以前，在基督裡揀選了我們」(弗一3-4 p)時，這豐盛並不是所有的人都享有的，因神只揀選祂有意要揀選的人。
+
+　　這也是為何保羅在另一處求神將信心賜給祂的選民(多一1)，免得任何人以為他能靠自己的努力獲得信心。這反而是神自己的榮耀，即白白地光照祂預先所揀選的人。伯爾拿正確地說：「唯有主的朋友聽進去這句話：『你們這小群不要懼怕』(路十二2)，『因為天國的奧祕只叫你們知道』(太十三11)。這些人是誰呢？『祂預先所知道......預先定下效法祂兒子模 樣』的人(羅八29 p.)，且那些已明白神的偉大和隱密計畫的人：『主認識誰是祂的人』(提後二19)，神向他們啟示祂從永遠所知道的計畫。而且除了神預先所認識和預定成為祂兒女的人之外，祂也不叫其他人與這偉大的奧秘有分。」他的結論是：「『耶和華的慈愛歸於敬畏祂的人，從亙古到永遠。』(詩一○三17；一○二17，Vs.)從亙古是指神的預定，到永遠是指信徒將得榮耀，前者沒有起頭，後者則沒有盡頭。」其實我們無需伯爾拿的見證，因主親口說：「唯獨從神來的，他看見過父。」(約六46)祂的意思是：神臉上的光令所有未重生之人感到懼怕。信心的確與揀選密不可分，只要我們明白揀選先於信心。
+
+　　基督在另一處也清楚地表明這次序：「差我來者的意思就是：祂所賜給我的，叫我一個也不失落......我父的意思是叫一切見子而信的人得永生。」(約六39-40 ， freely rendered.)祂若喜悅萬人得救，就必定賜給所有人祂的兒子，並以信心這聖潔的恩賜稼接他們到祂兒子身上。信心無疑是神的愛的獨特憑據，特別分配給祂一切所收養的兒女。因此基督在另一處經文中說：「羊也跟著他，因為認得他的聲音。羊不跟著生人；因為不認得他的聲音。」(約一○4-5，cf.vg.)這差別難道不就是主已開通他們的耳朵嗎？因無人能使自己成為羊，這反而是天上的恩典所造成的。主也以同樣的意義教導我們：救恩將永遠堅固和穩妥，因神以祂的大能保守之(約一○29)。因此，祂的結論是：非信徒不是祂的羊(約一026)，即他們不是神藉以賽亞的口所應許成為祂門徒的人(賽八16；五四13)。我以上所引用的經文既因教導聖徒的堅忍，就同時證明神的揀選是不後悔的。
+
+** 11遺棄同樣也不是根據人的行為，乃是根據神的旨意
+
+　　我們現在要簡略討論神所遺棄的人，因為保羅在(羅九13)中的教導也包括他們。就如雅各雖然沒有任何配得蒙恩的善行卻蒙恩；同樣地以掃當時雖然尚未被任何罪惡玷污，卻被神恨惡(羅九13)。因此，我們若以他們的行為解釋他們之間的差別就是在指控保羅，就如他完全看不見對我們而言是顯而易見的事！他的確看不見他們之間的差別在於行為，因他強調在善惡還沒有被做出來之前， 一個就蒙揀選，另一個則被棄絕，這就證明神預定的根基不在乎行為。而且當保羅預料那反對之人的異議，即神因此是否公正時，他根本沒有提到神照以掃的惡行報應他。他的結論是迥然不同的，即神興起祂所遺棄的人，好在他們身上彰顯自己的榮耀。他最後加上這結論：「神要憐憫誰就憐憫誰，要叫誰剛硬就叫誰剛硬。」(羅九18)由此可見，保羅將憐憫和剛硬都歸在神的預旨之下。我們不知道神為何施恩給祂的選民，因這是神自己的旨意，同樣地，除了神的旨意以 外，我們也不知道祂為何遺棄其他人，因當聖經告訴我們，神隨意剛硬人的心或憐憫他們時，就是在警告我們，不可在神的旨意之外尋找另一個因素。
